      printSshDError_noHostPubKey ().

  [ Bernard Cafarelli ]
  * New upstream version (4.0.5.3):
    - {res/,x2goclient.pro}: rename .rcc files to .qrc. Fixes: #1096. "rcc" is
      the extension for compiled resource files, whereas "qrc" is the mapping
      file. Qt5 stumbles upon that - i.e., it doesn't try to compile files
      with the "rcc" extension, while Qt4 did.

 -- X2Go Release Manager <git-admin@x2go.org>  Mon, 19 Sep 2016 09:07:07 +0200

x2goclient (4.0.5.2-0x2go1) unstable; urgency=medium

  [ Klaus Ade Johnstad ]
  * New upstream version (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: fixup translation by respecting the
      original messages' format, typo fixes and other changes.
    - res/i18n/x2goclient_fi.ts: fixup translation by respecting the original
      messages' format and other changes.
    - src/{ongetpass,onmainwindow}.cpp: fixup QPlastiqueStyle usage on Qt5.
      This particular style has been removed/replaced by Fusion, which
      incorporates features of both Plastique and Clearlooks styles.
    - x2goclient.spec: whitespace only.
    - src/onmainwindow.cpp: add (default) MacPorts prefix, /usr/local/bin and
      /opt/X11/bin to x2goclient's environment and child environments before
      starting xmodmap. Fixes: #1019. Requires a re-release of X2Go Client for
      OS X.
    - src/x2goutils.{cpp,h}: add new function add_to_path () to add multiple
      entries to a PATH-like string if they do not exist in there yet.
    - src/onmainwindow.cpp: replace old code to modify the PATH value with the
      new add_to_path () function.
    - src/{onmainwindow,sshmasterconnection}.cpp: refactoring and whitespace only
      changes following up the #1027 patch.
    - src/onmainwindow.h: add new enum for selecting SSH host key types.
    - src/onmainwindow.h: rename ONMainWindow::generateHostDsaKey () to