@@ -17,6 +17,11 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       file. Qt5 stumbles upon that - i.e., it doesn't try to compile files
       with the "rcc" extension, while Qt4 did.
 
+  [ Jason Alavaliant ]
+  * New upstream version (4.0.5.3):
+    - src/{onmainwindow.{cpp,h},help.cpp}: modify autostart option to support
+      multiple autostart apps at the same time. Fixes: #1024.
+
  -- X2Go Release Manager <git-admin@x2go.org>  Mon, 19 Sep 2016 09:07:07 +0200
 
 x2goclient (4.0.5.2-0x2go1) unstable; urgency=medium
